--- a/odoo/local-src/sf_sale/report/sf_sale_report_templates.xml
+++ b/odoo/local-src/sf_sale/report/sf_sale_report_templates.xml
@@ -65,7 +65,7 @@
                     </div>
                     <div name="contact" t-if="doc.partner_id" class="col-xs-3">
                         <strong>Contact</strong>
-                        <p style="line-height:1px;padding-top:8px;">
+                        <p style="padding-top:8px;">
                             <span t-field="doc.partner_id.name"/>
                             <span t-field="doc.partner_id" t-options='{"widget": "contact", "fields": ["phone", "mobile", "email"], "no_marker": False, "phone_icons": True}'/>
                         </p>
