--- a/odoo/local-src/sf_sale/report/sf_sale_report_templates.xml
+++ b/odoo/local-src/sf_sale/report/sf_sale_report_templates.xml
@@ -200,6 +200,19 @@
 
                 <span t-field="doc.note"/>
 
+                <!-- Bank details -->
+                <t t-set="bank_account" t-value="doc.payment_mode_id.fixed_journal_id.bank_account_id"/>
+                <div class="row" t-if="bank_account and bank_account.bank_id">
+                    <div class="col-xs-8 pull-left">
+                        <span>Payment for: </span><span t-field="doc.company_id.name"/> <span t-field="doc.company_id.partner_id.city"/>
+                        <br />
+                        <span>Bank: </span><span t-field="bank_account.bank_id.name"/>, <span t-field="bank_account.bank_id.country.code"/>-<span t-field="bank_account.bank_id.zip"/>
+                        <span t-field="bank_account.bank_id.city"/>, <span t-field="bank_account.bank_id.country"/>
+                        <br />
+                        <span>BIC/SWIFT: </span><span t-field="bank_account.bank_id.bic"/><span> / IBAN: </span><span t-field="bank_account.acc_number"/>
+                    </div>
+                </div>
+
                 <t t-set="o" t-value="doc.with_context({'lang':doc.partner_id.lang})" />
                 <t t-call="sf_terms_and_conditions.sale_terms_and_conditions" />
             </div>
