--- a/odoo/local-src/sf_stock/report/sf_report_delivery_note.xml
+++ b/odoo/local-src/sf_stock/report/sf_report_delivery_note.xml
@@ -138,8 +138,9 @@
                             </tr>
                         </thead>
                         <tbody>
-                            <tr t-if="any([order_line.id in pack_operation.sale_line_ids.ids or (order_line.product_id.type == 'service' and not o.backorder_id)
-                            for pack_operation in o.pack_operation_ids])" t-foreach="sale.order_line" t-as="order_line">
+                            <tr t-if="any(order_line.id in pack_operation.sale_line_ids.ids or (order_line.product_id.type == 'service' and
+                            not order_line.product_id.is_deposit and not o.backorder_id)
+                            for pack_operation in o.pack_operation_ids)" t-foreach="sale.order_line" t-as="order_line">
                                 <t t-set="pack_operation" t-value="o.pack_operation_ids.filtered(lambda p: order_line.id in p.sale_line_ids.ids)"/>
                                 <!-- Product -->
                                 <td>
@@ -259,7 +260,8 @@
                                     <td class="text-right">
                                         <t t-set="price_subtotal_products" t-value="sum(stock_move.sale_line_id.price_subtotal * stock_move.product_uom_qty / stock_move.sale_line_id.product_uom_qty
                                         for stock_move in o.move_lines if stock_move.sale_line_id.product_uom_qty and stock_move.state in ('assigned', 'done'))"/>
-                                        <t t-set="price_subtotal_services" t-value="sum(ol.price_subtotal for ol in sale.order_line if ol.product_id.type == 'service' and not o.backorder_id)"/>
+                                        <t t-set="price_subtotal_services" t-value="sum(ol.price_subtotal for ol in sale.order_line if ol.product_id.type == 'service'
+                                        and not ol.product_id.is_deposit and not o.backorder_id)"/>
                                         <span t-esc="price_subtotal_products + price_subtotal_services" t-options="{'widget': 'monetary', 'display_currency': sale.pricelist_id.currency_id}"/>
                                     </td>
                                 </tr>
@@ -268,7 +270,8 @@
                                     <td class="text-right">
                                         <t t-set="price_tax_products" t-value="sum(stock_move.sale_line_id.price_tax * stock_move.product_uom_qty / stock_move.sale_line_id.product_uom_qty
                                         for stock_move in o.move_lines if stock_move.sale_line_id.product_uom_qty and stock_move.state in ('assigned', 'done'))"/>
-                                        <t t-set="price_subtotal_services" t-value="sum(ol.price_tax for ol in sale.order_line if ol.product_id.type == 'service' and not o.backorder_id)"/>
+                                        <t t-set="price_subtotal_services" t-value="sum(ol.price_tax for ol in sale.order_line if ol.product_id.type == 'service'
+                                        and not ol.product_id.is_deposit and not o.backorder_id)"/>
                                         <span t-esc="price_tax_products + price_subtotal_services" t-options="{'widget': 'monetary', 'display_currency': sale.pricelist_id.currency_id}"/>
                                     </td>
                                 </tr>
@@ -277,7 +280,8 @@
                                     <td class="text-right">
                                         <t t-set="price_total_products" t-value="sum(stock_move.sale_line_id.price_total * stock_move.product_uom_qty / stock_move.sale_line_id.product_uom_qty
                                         for stock_move in o.move_lines if stock_move.sale_line_id.product_uom_qty and stock_move.state in ('assigned', 'done'))"/>
-                                        <t t-set="price_subtotal_services" t-value="sum(ol.price_total for ol in sale.order_line if ol.product_id.type == 'service' and not o.backorder_id)"/>
+                                        <t t-set="price_subtotal_services" t-value="sum(ol.price_total for ol in sale.order_line if ol.product_id.type == 'service'
+                                        and not ol.product_id.is_deposit and not o.backorder_id)"/>
                                         <span t-esc="price_total_products + price_subtotal_services" t-options="{'widget': 'monetary', 'display_currency': sale.pricelist_id.currency_id}"/>
                                     </td>
                                 </tr>
