--- a/odoo/local-src/sf_stock/report/sf_report_delivery_note.xml
+++ b/odoo/local-src/sf_stock/report/sf_report_delivery_note.xml
@@ -241,7 +241,7 @@
                                                 <span t-esc="'{0:,.2f}'.format(delivered_qty * order_line.price_subtotal / order_line.product_uom_qty)"/>
                                             </td>
                                             <td t-if="order_line.product_id.type == 'service'" class="text-right" style="border-top: none;">
-                                                <span t-esc="'{0:,.2f}'.format(order_line.product_uom_qty * order_line.price_subtotal)"/>
+                                                <span t-esc="'{0:,.2f}'.format(order_line.product_uom_qty * order_line.price_unit)"/>
                                             </td>
                                         </tr>
                                     </table>
