--- a/odoo/local-src/sf_account/views/account_move.xml
+++ b/odoo/local-src/sf_account/views/account_move.xml
@@ -28,6 +28,9 @@
                 <attribute name="string">Project</attribute>
                 <attribute name="help">Analytic Account means Project</attribute>
             </field>
+            <field name="analytic_account_id" position="before">
+                <field name="analytic_tag_ids" string="Team"/>
+            </field>
             <field name="credit" position="after">
                 <field name="tax_line_id" string="Tax Account"/>
             </field>
