--- a/odoo/local-src/sf_helpdesk/views/helpdesk_ticket.xml
+++ b/odoo/local-src/sf_helpdesk/views/helpdesk_ticket.xml
@@ -8,6 +8,7 @@
             <field name="arch" type="xml">
                 <field name="name" position="before">
                     <field name="number"/>
+                    <span>: &#160;</span>
                 </field>
 
                 <field name="partner_id" position="attributes">
@@ -35,6 +36,17 @@
             <field name="inherit_id" ref="helpdesk.helpdesk_ticket_view_kanban"/>
             <field name="arch" type="xml">
                 <field name="id" position="replace">
+                    <field name="number"/>
+                </field>
+            </field>
+        </record>
+
+        <record id="sf_helpdesk_tickets_view_search" model="ir.ui.view">
+            <field name="name">sf.helpdesk.ticket.search</field>
+            <field name="model">helpdesk.ticket</field>
+            <field name="inherit_id" ref="helpdesk.helpdesk_tickets_view_search"/>
+            <field name="arch" type="xml">
+                <field name="name" position="before">
                     <field name="number"/>
                 </field>
             </field>
