--- a/odoo/local-src/sf_sale/views/sale_views.xml
+++ b/odoo/local-src/sf_sale/views/sale_views.xml
@@ -13,6 +13,16 @@
         </field>
     </record>
 
+    <record id="sf_view_order_form" model="ir.ui.view">
+        <field name="name">sf.order.form</field>
+        <field name="model">sale.order</field>
+        <field name="inherit_id" ref="sale.view_order_form"/>
+        <field name="arch" type="xml">
+            <field name="user_id" position="after">
+                <field name="second_user_id"/>
+            </field>
+        </field>
+    </record>
 
     <record id="view_order_form_user_delivery_method" model="ir.ui.view">
         <field name="name">sf.order.form.carrier.user</field>
