Propagate lot from sale line to 3 delivery steps

--- a/odoo/local-src/sf_stock/views/stock_picking_type.xml
+++ b/odoo/local-src/sf_stock/views/stock_picking_type.xml
@@ -10,6 +10,7 @@
                     <field name="show_button_shipped"/>
                     <field name="propagate_delivery_info"/>
                     <field name="show_availability_wizard"/>
+                    <field name="allow_unassign_lot"/>
                 </field>
             </field>
     </record>
